Fix Java 17 upgrade issue with container proxy configuration generation
Collections.emptyList() is private and can no longer be accessed at
runtime when serializing to Json. List.of() doesn't have this problem.